@@ -5,8 +5,8 @@ tz_file = "/etc/timezone"
 [ 'filesystem' ]
 supported = """
 ext3
-ext4
 reiserfs
+swap
 """
 
 mountpoints = """
